--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
+        "element-ui": "^2.15.2",
         "izitoast": "^1.4.0",
         "sweetalert2": "^11.0.16",
         "vue-progressbar": "^0.7.5",
